// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Slider /> Change the defaultValue props 1`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the defaultValue props 2`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the min and max props 1`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the min and max props 2`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the onValueChange props 1`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the onValueChange props 2`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the value props 1`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Change the value props 2`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Render the marks props 1`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Render the marks props 2`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
    <span
      class="c-lmDkHl c-lmDkHl-iwHen-css"
      data-active="true"
    >
      <span
        class="c-iuedIb c-iuedIb-ijPcYZy-css"
      />
    </span>
    <span
      class="c-lmDkHl c-lmDkHl-ibdNZrc-css"
      data-active="false"
    >
      <span
        class="c-iuedIb c-iuedIb-ijPcYZy-css"
      />
    </span>
    <span
      class="c-lmDkHl c-lmDkHl-igXDGmT-css"
      data-active="false"
    >
      <span
        class="c-iuedIb c-iuedIb-ijPcYZy-css"
      >
        50
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`<Slider /> Renders Correctly 1`] = `
<DocumentFragment>
  <span
    aria-disabled="false"
    class="c-jNrgAO"
    data-orientation="horizontal"
    data-testid="slider"
    dir="ltr"
    style="--radix-slider-thumb-transform: translateX(-50%);"
  >
    <span
      class="c-jfCizU SliderTrack"
      data-orientation="horizontal"
    >
      <span
        class="c-xqWKh SliderRange"
        data-orientation="horizontal"
        style="left: 0%; right: 90%;"
      />
    </span>
    <span
      style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(10% + 0px);"
    >
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="10"
        class="c-erhIZu SliderThumb"
        data-orientation="horizontal"
        data-radix-collection-item=""
        role="slider"
        style=""
        tabindex="0"
      >
        <span
          class="c-jbSxsI SliderLabel"
        >
          10
        </span>
      </span>
    </span>
  </span>
</DocumentFragment>
`;
